# Product-Selection

./: .env.example  .gitignore  IXSPY_PLATFORM_EXPORT_DOUBLE_SCREENING_FLOW.md  PLATFORM_EXPORT_RUNBOOK.md  README.md  RUNBOOK.md  docker-compose.yml  ixspy-自动下载双筛.bat  pyproject.toml  双筛-把下载文件夹拖到这里.bat
.tmp/: erp_url_env.ps1
configs/: erp_categories.yaml
docs/: erp-image-search.md  image-search-performance.md  metabase-dashboards.md
migrations/: 001_raw_and_ops.sql  002_standard_and_analysis.sql  003_analysis.sql  004_product_matches.sql  005_dashboard_views.sql  006_image_decisions.sql  007_decision_embedding.sql
scripts/: chunked_rerank_image_search.py  download_tiktok_images_with_browser.py  enrich_best_erp_candidates.py  generate_shopee_boss_report.py  generate_tiktok_boss_report.py  incremental_erp_image_search.py  incremental_erp_image_search_local_files.py  ixspy_auto_prompt.ps1  run_product.bat
tests/: conftest.py  test_analysis_profit.py  test_analysis_run.py  test_analysis_scoring.py  test_analysis_store.py  test_best_match.py  test_cli.py  test_collect_aliexpress_fetch.py  test_collect_aliexpress_probe.py  test_collect_erp_fetch.py  test_collect_erp_probe.py  test_collect_orchestrator.py  test_collect_runner.py  test_collect_runs.py  test_collect_seerfar_fetch.py  test_collect_seerfar_probe.py  test_collect_sources.py  test_contracts.py  test_dashboard_views.py  test_embed_cache.py  test_erp_image_search.py  test_erp_token.py  test_external_importer.py  test_image_decisions.py  test_image_pipeline.py  test_importer.py  test_ixspy_download.py  (+19 more)
(+62 files in other folders)
