[project]
name = "sourcing"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "psycopg[binary]>=3.2",
    "python-dotenv>=1.0",
    "selenium>=4.15.0",
    "webdriver-manager>=4.0.0",
    "pandas>=2.0",
    "pypinyin>=0.51",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]
# 图搜嵌入复核(erp-image-rerank)需要 AVIF 解码(AliExpress 图多为 AVIF)；
# torch + DINOv2 模型走 518 环境(运行期按 COLLECT_518_DIR 加载)。
rerank = ["pillow-avif-plugin>=1.4", "Pillow>=10.0", "imagehash>=4.3", "numpy>=1.24", "torch>=2.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
